fix close button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1170,6 +1170,7 @@ button:disabled:hover > .btn-green,
 #likes-popup header {
   display: flex;
   gap: 15px;
+  justify-content: space-between;
   align-items: center;
   padding: 15px;
 }
